--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,8 +1,39 @@
+
 * {
   padding: 0;
   margin:  0;
 }
 
 body {
-  font-style:  sans-serif;
+  font-family: sans-serif;
+  font-size:  1.5rem;
+}
+
+p {
+  color:  #212128;
+}
+
+.questions {
+  position: absolute;
+  bottom: 0%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height:  50%;
+  width:  100%;
+}
+
+.question {
+  cursor: pointer;
+  width:  33%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  height: 80%;
+  background-color: #E33E57;
+}
+
+.question:hover {
+  background-color: #cf384f;
 }
