--- a/website/src/index.css
+++ b/website/src/index.css
@@ -7,13 +7,19 @@
 body {
   font-family: sans-serif;
   font-size:  1.5rem;
+  background-color: #212128;
+  color: white;
+}
+
+.header {
+  text-align: center;
 }
 
 p {
   color:  #212128;
 }
 
-.questions {
+.answears {
   position: absolute;
   bottom: 0%;
   display: flex;
@@ -23,9 +29,9 @@ p {
   width:  100%;
 }
 
-.question {
+.answear {
   cursor: pointer;
-  width:  33%;
+  width: 22%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -34,6 +40,6 @@ p {
   background-color: #E33E57;
 }
 
-.question:hover {
+.answear:hover {
   background-color: #cf384f;
 }
